[gd_scene load_steps=6 format=2]

[ext_resource path="res://3DToolbox/GoodSpinbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui_theme.tres" type="Theme" id=2]
[ext_resource path="res://art/joystix monospace.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ScreenToolbox/SizeBox.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="SizeBox" type="VBoxContainer"]
margin_right = 122.0
margin_bottom = 88.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 233.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Size"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 28.0
margin_right = 233.0
margin_bottom = 32.0
custom_constants/margin_top = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 36.0
margin_right = 233.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 8.0
margin_right = 91.0
margin_bottom = 28.0
text = "width  "

[node name="GoodSpinbox" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 95.0
margin_right = 233.0
margin_bottom = 36.0
focus_next = NodePath("../../HBoxContainer2/GoodSpinbox2")
focus_mode = 1
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 76.0
margin_right = 233.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 8.0
margin_right = 91.0
margin_bottom = 28.0
text = "height "

[node name="GoodSpinbox2" parent="HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 95.0
margin_right = 233.0
margin_bottom = 36.0
focus_previous = NodePath("../../HBoxContainer/GoodSpinbox")
focus_mode = 1
size_flags_horizontal = 10
[connection signal="value_changed" from="HBoxContainer/GoodSpinbox" to="." method="_on_GoodSpinbox_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/GoodSpinbox2" to="." method="_on_GoodSpinbox2_value_changed"]
